<resources>
    <string name="app_name" translatable="false">Game Lib</string>
    <string name="facebook_app_id" translatable="false">125479041438301</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb125479041438301</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="login" translatable="false">Login</string>
    <string name="password">Password</string>
    <string name="keep_logged_in">Keep me logged in</string>
    <string name="log_in" translatable="false">Log In</string>

    <string name="loading_game_catalog">Loading game catalog...</string>
    <string name="loading_game_library">Loading game library...</string>
    <string name="loading_store">Loading stores...</string>

    <string name="invalid_username">Enter a valid username</string>
    <string name="invalid_passowrd">Enter a valid password</string>
    <string name="user_sync_failed">An error occurred while syncing login data</string>
    <string name="login_failed">Login attempt failed. Check your username and password.</string>

    <string name="catalog">Catalog</string>
    <string name="library">Library</string>
    <string name="stores">Stores</string>
    <string name="settings">Settings</string>
    <string name="user">User</string>
    <string name="about">About</string>
    <string name="quit">Quit</string>

    <string name="add_to_library">Add to library</string>
    <string name="already_in_library">Game already in library</string>
    <string name="added_to_library">Added to the library</string>
    <string name="error_add_to_library">An error occurred while adding to library</string>

    <string name="copyright_info" translatable="false">Game Lib © Matheus Coelho Espinasso</string>

    <string name="version">Version</string>

    <string name="notes">Notes</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

    <string name="app_blurb">Game Lib - Your game library</string>
    <string name="error_update">An error occurred while updating the information</string>

    <string name="warning">Warning</string>
    <string name="confirm_delete_game">Are you sure you want to remove this game from your library?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>

    <string name="developer_colon">Developer:</string>
    <string name="publisher_colon">Publisher:</string>
    <string name="rating_colon">Rating:</string>
    <string name="saved_exclamation">Saved!</string>
    <string name="title_activity_store_map">Map</string>

    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="open_map">Open Map</string>
    <string name="make_call">Make Call</string>
    <string name="share">Share</string>
    <string name="share_text">Check out the game:</string>
</resources>
