<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_catalog"
            android:icon="@drawable/ic_library_add"
            android:title="@string/catalog" />
        <item
            android:id="@+id/nav_library"
            android:icon="@drawable/ic_collections_bookmark"
            android:title="@string/library" />
        <item
            android:id="@+id/nav_store"
            android:icon="@drawable/ic_store"
            android:title="@string/stores" />
    </group>

    <item android:title="@string/settings">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info"
                android:title="@string/about" />
            <item
                android:id="@+id/nav_quit"
                android:icon="@drawable/ic_exit_to_app"
                android:title="@string/quit" />
        </menu>
    </item>

</menu>
